# mpqtchess

./: CMakeLists.txt  MPChessClient.cpp  MPChessClient.h  Notes.md  buildAfresh.sh  download_and_organise_chess_assets.py  make_and_deploy.sh
MultiPlayerChess/: CMakeLists.txt  MPChessServer.cpp  MPChessServer.h  Notes.txt  README.md  WASM playground.json  buildAfresh.sh  context.txt  downloadAssets.sh
MultiPlayerChess/client/: CMakeLists.txt.old  MPChessClient.cpp  MPChessClient.h  MPChessClient.ui  resources.qrc
MultiPlayerChess/client/resources/: resources.qrc
MultiPlayerChess/server/: CMakeLists.txt.old  MPChessServer.cpp  MPChessServer.h
assets/: pieces.qrc  sounds.qrc  themes.qrc
assets/pieces/: pieces.qrc
assets/sounds/: sounds.qrc
assets/themes/: classic.json  minimalist.json  modern.json  themes.qrc
client/: main.cpp
cmake/: cmake_uninstall.cmake.in
newMPChess/: notes.txt
newMPChess/client/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  ChessClient.cpp  ChessClient.h  LoginDialog.h  NetworkManager.cpp  NetworkManager.h
newMPChess/client/Resources/: resources.qrc
newMPChess/server/: MPChessServer.cpp  MPChessServer.h
server/: main.cpp  server.cpp
src/: QtCompat.h
src/core/: ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  ChessPiece.cpp  ChessPiece.h  Position.h
src/gui/: ChessBoardView.cpp  ChessBoardView.h  ChessPieceItem.cpp  ChessPieceItem.h  ConnectDialog.cpp  ConnectDialog.h  GameControlPanel.cpp  GameControlPanel.h  MainWindow.cpp  MainWindow.h  MoveHistoryWidget.cpp  MoveHistoryWidget.h  SettingsDialog.cpp  SettingsDialog.h
src/network/: ChessClient.cpp  ChessClient.h  ChessProtocol.h  ChessServer.cpp  ChessServer.h  NetworkClient.cpp  NetworkClient.h
src/util/: Settings.cpp  Settings.h  SoundManager.cpp  SoundManager.h  ThemeManager.cpp  ThemeManager.h
